<resources>
    <string name="app_name">individual</string>
    <string name="title_activity_register">register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="rus">Русский</string>
    <string name="kyr">Кыргызча</string>
    <string name="lor_text">Для более эффективной работы приложения просим вас зарегестрироваться или войти в существующий аккаунт :)</string>
    <string name="ent">Вход</string>
    <string name="register">Регистрация</string>
    <string name="reg">Регистрация</string>
    <string name="create_acc">Создайте свой аккаунт</string>
    <string name="enter_mail">Введите почту*</string>
    <string name="password">Придумайте пароль*</string>
    <string name="password2">Повторите пароль*</string>
    <string name="phonenum">Ваш номер телефона*</string>
    <string name="nickorname">Ник или Имя*</string>
    <string name="end_reg">Завершить регистрацию</string>
    <string name="have_acc">У Вас уже есть аккаунт?</string>
    <string name="Entrr">Войдите!</string>
    <string name="enter">Вход</string>
    <string name="in_acc">В существующий аккаунт</string>
    <string name="or">или</string>
    <string name="lost_maybe">Забыли свою почту или пароль?</string>
    <string name="pass_pweas">Пароль</string>
    <string name="remeber_me">Запомнить меня</string>
    <string name="ent_in">Войти</string>
    <string name="hevent_acc">У Вас еще нет аккаунта?</string>
    <string name="sign_in">Зарегистрируйтесь!</string>
    <string name="q_a"><![CDATA[Q&A]]></string>
    <string name="online_shopping">Онлайн покупки</string>
    <string name="product_category">Категории продуктов</string>
    <string name="search"> Поиск</string>
    <string name="todo">TODO</string>
    <string name="todo2">todo2</string>
    <string name="todo3">TODO3</string>
    <string name="todo4">TODO4</string>
    <string name="todo5">todo5</string>
    <string name="todo6">TODO6</string>
    <string name="todo7">todo7</string>
    <string name="todo8">TODO8</string>
    <string name="todo9">TODO9</string>
    <string name="todo10">TODO10</string>
    <string name="todo10">TODO10</string>
    <string name="todo11">TODO11</string>
    <string name="pro_mo">Акции</string>
    <string name="more_info">Вы можете прочитать более подробную информацию об акции нажав на нее</string>
    <string name="bonus">Бонусная карта</string>
    <string name="points">Для накопления и списания бонусов необходимо показать эту страницу кассиру</string>
    <string name="thanks">Спасибо за покупку! :)</string>
    <string name="categories">Категории продуктов</string>
</resources>