<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/f2"
        android:layout_marginTop="10dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/component_27" />

        <LinearLayout
            android:id="@+id/regg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                style="@style/b30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter"
                android:textColor="@color/white" />

            <TextView
                style="@style/n15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_acc"
                android:textColor="@color/white" />

        </LinearLayout>


        <ImageView
            android:id="@+id/google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regg"
            android:layout_marginStart="25dp"
            android:layout_marginTop="35dp"
            app:srcCompat="@drawable/google" />


        <TextView
            android:id="@+id/or"
            style="@style/l15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/google"
            android:layout_marginStart="145dp"
            android:layout_marginTop="20dp"
            android:text="@string/or"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/ed_reg_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/or"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/n15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/enter_mail"
                android:textColor="@color/white" />

            <EditText
                android:layout_width="290dp"
                android:layout_height="30dp"
                android:background="@color/light_lav" />

        </LinearLayout>

        <TextView
            android:id="@+id/lost_password"
            style="@style/semi10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_reg_1"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:text="@string/lost_maybe"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/password_pwease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lost_password"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/n15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/pass_pweas"
                android:textColor="@color/white" />

            <EditText
                android:layout_width="290dp"
                android:layout_height="30dp"
                android:background="@color/light_lav" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_pwease"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/rectangle_68" />

            <TextView
                style="@style/semi10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remeber_me"
                android:textColor="@color/white" />

        </LinearLayout>


        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:id="@+id/log_in"
            android:layout_below="@+id/remember"
            android:layout_marginStart="100dp"
            android:layout_marginTop="30dp"
            android:background="@color/dark_violet"
            android:text="@string/ent_in"
            android:textColor="@color/white" />



    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hevent_acc"
            style="@style/semi15"
            android:textColor="@color/violet"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            style="@style/semi15"
            android:textColor="@color/reddy"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>