<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/component_29" />

        <LinearLayout
            android:id="@+id/regg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/m25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg"
                android:textColor="@color/white" />

            <TextView
                style="@style/n15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_acc"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/reg_ed_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regg"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/ed_reg_1"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    style="@style/n15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_mail"
                    android:textColor="@color/white" />

                <EditText
                    android:layout_width="290dp"
                    android:layout_height="30dp"
                    android:background="@color/light_lav" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ed_reg_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ed_reg_1"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    style="@style/n15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/white" />

                <EditText
                    android:layout_width="290dp"
                    android:layout_height="30dp"
                    android:background="@color/light_lav" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ed_reg_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ed_reg_2"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    style="@style/n15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password2"
                    android:textColor="@color/white" />

                <EditText
                    android:layout_width="290dp"
                    android:layout_height="30dp"
                    android:background="@color/light_lav" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ed_reg_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ed_reg_3"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    style="@style/n15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phonenum"
                    android:textColor="@color/white" />

                <EditText
                    android:layout_width="290dp"
                    android:layout_height="30dp"
                    android:background="@color/light_lav" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ed_reg_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ed_reg_4"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    style="@style/n15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nickorname"
                    android:textColor="@color/white" />

                <EditText
                    android:layout_width="290dp"
                    android:layout_height="30dp"
                    android:background="@color/light_lav" />

            </LinearLayout>
        </LinearLayout>


        <Button
            android:id="@+id/end_reg"
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_below="@+id/reg_ed_layout"
            android:layout_marginStart="90dp"
            android:layout_marginTop="30dp"
            android:background="@color/dark_violet"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/end_reg"
            android:textColor="@color/white" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_acc"
          style="@style/semi15"
            android:textColor="@color/violet"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Entrr"
            style="@style/semi15"
            android:textColor="@color/reddy"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>