<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LorRActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/tabl"
            android:contentDescription="@string/todo2" />

        <TextView
            android:layout_width="260dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="@string/lor_text"
            android:textColor="@color/violet"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_marginBottom="50dp"
                android:background="@color/dark_red"/>

            <Button
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:background="@color/dark_red"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:id="@+id/go_login"
                android:layout_marginBottom="50dp"
                android:background="@color/reddy"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/ent"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:id="@+id/register"
                android:background="@color/reddy"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>



    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/f2"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/todo" />
</androidx.constraintlayout.widget.ConstraintLayout>